--- a/src/components/QuestionsArea/QuestionsArea.scss
+++ b/src/components/QuestionsArea/QuestionsArea.scss
@@ -1,4 +1,5 @@
 @import '../../assets/scss/variables';
+@import '../../assets/scss/breakpoints-mixin';
 .questions {
   width: 100%;
   &-navigation {
@@ -53,10 +54,10 @@
     }
     &__lists-wrapper {
       display: flex;
-      align-items: flex-start;
       justify-content: space-between;
       align-items: stretch;
       margin-bottom: 3rem;
+      flex-wrap: wrap;
     }
     &__options-list {
       display: flex;
@@ -68,13 +69,18 @@
       display: flex;
       align-items: center;
       justify-content: space-between;
+      gap: 1rem;
       padding: 1.25rem;
       background-color: $text-lightest;
       border: 2px solid #d6d5d6;
       border-radius: 0.375em;
       margin-bottom: 0.75rem;
+
       &:hover {
         cursor: pointer;
+      }
+      svg {
+        min-width: 19px;
       }
     }
     &__ranked-list {
@@ -87,6 +93,7 @@
       & > div:first-child {
         height: 100%;
         width: 100%;
+        border-radius: 5px;
         z-index: 1;
       }
     }
@@ -99,6 +106,14 @@
       border: 2px solid #d6d5d6;
       border-radius: 0.375rem;
       margin-bottom: 0.75rem;
+      height: 64px;
+      position: relative;
+      z-index: 3;
+      p {
+        overflow: hidden;
+        white-space: nowrap;
+        text-overflow: ellipsis;
+      }
 
       &:hover {
         cursor: pointer;
@@ -109,12 +124,14 @@
       align-items: center;
       gap: 0.25rem;
       padding: 0.375rem;
-      margin-top: 1.5rem;
-      position: relative;
+      position: absolute;
+      inset-inline-end: 0;
+      bottom: -1.5rem;
       z-index: 3;
       p {
         color: $text-light;
         font-size: 0.813rem;
+        font-weight: 500;
       }
       &:hover {
         cursor: pointer;
@@ -125,7 +142,6 @@
       top: 0;
       inset-inline-start: 0;
       width: 100%;
-      z-index: 0;
     }
     &__placeholder {
       height: 64px;
@@ -142,6 +158,56 @@
         font-size: 1.188rem;
         color: $accent-accent-text;
         width: 1.5rem;
+      }
+    }
+    &__next {
+      background-color: $accent-main;
+      color: white;
+      font-size: 1rem;
+      font-weight: 500;
+      padding: 0.5rem 1rem;
+      border-radius: 0.25rem;
+      display: inline-block;
+      border: none;
+      box-shadow: none;
+      outline: none;
+      &:hover {
+        cursor: pointer;
+        background-color: darken($accent-main, 3);
+      }
+    }
+  }
+}
+@include breakpoint(lg) {
+  .questions {
+    .single-question {
+      &__options-list {
+        max-width: 100%;
+
+        border-bottom: 1px dashed $accent-main;
+        margin-bottom: 1rem;
+      }
+      &__ranked-list {
+        height: 100%;
+        min-width: 100%;
+        & > div:first-child {
+          width: 100%;
+          min-height: 10rem;
+        }
+      }
+      &__placeholders {
+        width: 100%;
+      }
+      &__placeholder {
+        p {
+          inset-inline-start: -1rem;
+          font-size: 1rem;
+
+          width: fit-content;
+        }
+      }
+      &__next {
+        margin-block: 2rem;
       }
     }
   }
