--- a/src/components/QuestionsArea/QuestionsArea.scss
+++ b/src/components/QuestionsArea/QuestionsArea.scss
@@ -11,11 +11,13 @@
     padding-inline-end: 0.5rem;
     &__prev,
     &__next {
-      padding: 0;
-      border: none;
-      background-color: transparent;
+      padding: 0.25rem;
+      border: 1px solid #c0c4f7;
+      border-radius: 0.25rem;
+      background-color: $background-light;
       &:hover {
         cursor: pointer;
+        background-color: darken($background-light, 3);
       }
     }
   }
@@ -54,7 +56,6 @@
       display: flex;
       justify-content: space-between;
       align-items: stretch;
-      margin-bottom: 3rem;
       flex-wrap: wrap;
     }
     &__options-list {
@@ -63,24 +64,7 @@
       width: 100%;
       max-width: 432px;
     }
-    &__option {
-      display: flex;
-      align-items: center;
-      justify-content: space-between;
-      gap: 1rem;
-      padding: 1.25rem;
-      background-color: $text-lightest;
-      border: 2px solid #d6d5d6;
-      border-radius: 0.375em;
-      margin-bottom: 0.75rem;
 
-      &:hover {
-        cursor: pointer;
-      }
-      svg {
-        min-width: 19px;
-      }
-    }
     &__ranked-list {
       display: flex;
       flex-direction: column;
@@ -95,28 +79,7 @@
         z-index: 1;
       }
     }
-    &__ranked-option {
-      display: flex;
-      align-items: center;
-      justify-content: space-between;
-      padding: 1.25rem;
-      background-color: $text-lightest;
-      border: 2px solid #d6d5d6;
-      border-radius: 0.375rem;
-      margin-bottom: 0.75rem;
-      height: 64px;
-      position: relative;
-      z-index: 3;
-      p {
-        overflow: hidden;
-        white-space: nowrap;
-        text-overflow: ellipsis;
-      }
 
-      &:hover {
-        cursor: pointer;
-      }
-    }
     &__reset {
       display: flex;
       align-items: center;
@@ -141,23 +104,7 @@
       inset-inline-start: 0;
       width: 100%;
     }
-    &__placeholder {
-      height: 64px;
-      border: 2px dashed #c0c4f7;
-      border-radius: 6px;
-      margin-bottom: 12px;
-      position: relative;
 
-      p {
-        position: absolute;
-        top: 50%;
-        transform: translateY(-50%);
-        inset-inline-start: -1.5rem;
-        font-size: 1.188rem;
-        color: $accent-accent-text;
-        width: 1.5rem;
-      }
-    }
     &__next {
       background-color: $accent-main;
       color: white;
@@ -166,6 +113,7 @@
       padding: 0.5rem 1rem;
       border-radius: 0.25rem;
       display: inline-block;
+      margin-top: 1rem;
       border: none;
       box-shadow: none;
       outline: none;
@@ -179,9 +127,12 @@
 @include breakpoint(lg) {
   .questions {
     .single-question {
+      &__lists-wrapper{
+        justify-content: flex-start;
+        align-items: center;
+      }
       &__options-list {
         max-width: 100%;
-
         border-bottom: 1px dashed $accent-main;
         margin-bottom: 1rem;
       }
@@ -195,17 +146,6 @@
       }
       &__placeholders {
         width: 100%;
-      }
-      &__placeholder {
-        p {
-          inset-inline-start: -1rem;
-          font-size: 1rem;
-
-          width: fit-content;
-        }
-      }
-      &__next {
-        margin-block: 1rem;
       }
     }
   }
