--- a/src/components/QuestionsArea/QuestionsArea.scss
+++ b/src/components/QuestionsArea/QuestionsArea.scss
@@ -11,8 +11,8 @@
     padding-inline-end: 0.5rem;
     &__prev,
     &__next {
+      padding: 0;
       border: none;
-      border-radius: 0.25rem;
       background-color: transparent;
       &:hover {
         cursor: pointer;
@@ -61,6 +61,9 @@
       flex-direction: column;
       width: 100%;
       max-width: 432px;
+      & > div {
+        height: 100%;
+      }
     }
 
     &__ranked-list {
@@ -109,7 +112,7 @@
       font-size: 1rem;
       font-weight: 500;
       padding: 0.5rem 1rem;
-      border-radius: 0.25rem;
+      border-radius: 0.125rem;
       display: inline-block;
       margin-top: 1rem;
       border: none;
@@ -144,6 +147,9 @@
       }
       &__placeholders {
         width: 100%;
+      }
+      &__next {
+        margin-bottom: 1rem;
       }
     }
   }
