enhance scss variable names

--- a/src/components/OptionPlaceholder/OptionPlaceholder.scss
+++ b/src/components/OptionPlaceholder/OptionPlaceholder.scss
@@ -13,7 +13,7 @@
     transform: translateY(-50%);
     inset-inline-start: -1.5rem;
     font-size: 1.188rem;
-    color: $accent-accent-text;
+    color: $accent-main-light;
     width: 1.5rem;
   }
 }
